# RoboMaster2021-HNU-YueLuRM-Vision

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  watchdog.sh
AngleSolver/: AngleSolver.cpp  AngleSolver.h  DistanceSolver.cpp  DistanceSolver.h  PoseCalculation.cpp  PoseCalculation.h  README.md
ArmorDetector/: ArmorDetector.cpp  ArmorDetector.h
ArmorDetector_CNN/: ArmorDetector.cpp  ArmorDetector.h
ArmorDetector_TRD/: Armor.hpp  ArmorDector.cpp  ArmorDector.h  ArmorDetector.cpp  ArmorDetector.h  Defaker.hpp  LightBarInfo.hpp  Remap.hpp  Remapor.hpp  tempCodeRunnerFile.hpp
ArmorTracker/: Armor_tracker.cpp  Armor_tracker.h  fhog.h  gradientMex.cpp  gradientMex.h  kcf.cpp  kcf.h  sse.h  wrappers.h
Buffer/: DataBuf.hpp  ImageData.hpp  SerialData.hpp  SolveEssential.h
CamCapture/: CamCapture.hpp
Camera_Calibration_Data/: camera_2_data.xml  camera_5_data.xml  camera_7_data.xml  camera_9_data.xml
MineralDetector/: MineralDetector.cpp  MineralDetector.h
Param/: ArmorParams.xml  camera_10_data.xml  camera_1_data.xml  camera_2_data.xml  camera_3_data.xml  camera_4_data.xml  camera_6_data.xml  camera_8_data.xml  nanodet.param  out_myCV_data.xml
Protocol/: protocol.cpp  protocol.h
Protocol/CRC/: bsp_crc16.cpp  bsp_crc16.h  bsp_crc8.cpp  bsp_crc8.h
QRDetector/: QRDetector.cpp  QRDetector.h
Serial/: serial.cpp  serial.h  serialcodec.cpp  serialcodec.h
TaskSwitcher/: TaskSwitcher.cpp  TaskSwitcher.h  Task_switcher.cpp  Task_switcher.h
ThreadManager/: ThreadManager.cpp  ThreadManager.h
VideoCapture/: CamCapture.hpp
Windmill/: GeneralDefs.h  WindmillSolver.cpp  WindmillSolver.h  test_windmill_solver.cpp  windmill_predict.cpp  windmill_predict.h
WindmillPredict/: test_windmill_predict.cpp  windmill_predict.cpp  windmill_predict.h
nanodet/: nanodet.cpp  nanodet.h
